--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "15.1.2",
+    "next-themes": "^0.4.4",
     "preline": "^2.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
