--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextjs-music-downloader",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.13",
+    "@ffmpeg/util": "^0.12.1",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
     "preline": "^2.6.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "soundcloud.ts": "^0.6.2",
+    "youtubei.js": "^12.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@ffmpeg/types": "^0.12.3",
     "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^20",
     "@types/react": "^19",
