--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.13",
     "@ffmpeg/util": "^0.12.1",
+    "ffmpeg-static": "^5.2.0",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
     "preline": "^2.6.0",
