--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@ffmpeg/ffmpeg": "^0.12.13",
     "@ffmpeg/util": "^0.12.1",
     "ffmpeg-static": "^5.2.0",
+    "google-auth-library": "^9.15.1",
+    "loglevel": "^1.9.2",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
     "preline": "^2.6.0",
